# bracket-bond

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Anchor.toml  Dockerfile  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json
app/: .env.local.example  .gitignore  README.md  next.config.mjs  package.json  pnpm-lock.yaml  railway.json  tailwind.config.ts
app/app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/components/: AnalyticsPanel.tsx  BracketMini.tsx  DemoBanner.tsx  FifaResults.tsx  Footer.tsx  JudgeTimeline.tsx  LiveBadge.tsx  MarkTicker.tsx  MarketCard.tsx  Nav.tsx  OutcomeRow.tsx  ProbBar.tsx  ProofReceipt.tsx  PunditChat.tsx  SettlementFeedItem.tsx  StatTile.tsx  StatusPill.tsx  TradeSheet.tsx  WalletButton.tsx
app/lib/: bracketBond.ts  cn.ts  fifa.ts  format.ts  mockData.ts  punditFallback.ts  teams.ts  types.ts  useBracketBond.ts
docs/: AGENT-HANDOFF.md  DEMO.md  DEPLOY.md  ROADMAP.md  SETUP.md  TESTING.md  architecture.md  competitors.md  spec.md  txline-integration.md  ui-design.md  worldcup.md
docs-site/: README.md  package.json  pnpm-lock.yaml
docs-site/app/: global.css  layout.tsx
docs-site/components/: mdx.tsx  mermaid.tsx
docs-site/lib/: layout.shared.tsx
fixtures/: knockout-run.json
keys/: README.md  bracket_bond-keypair.json
programs/bracket-bond/: Cargo.toml
programs/bracket-bond/src/: errors.rs  lib.rs  state.rs
scripts/agent/: keeper.ts
scripts/lib/: program.ts  teams.ts
scripts/replay/: replay.ts
scripts/txline/: auth.ts  create-market.ts  discover.ts  index.ts  (+8 more)
tests/: bracket-bond.ts
(+26 files in other folders)
